--- a/main.css
+++ b/main.css
@@ -21,6 +21,12 @@ body{
     width: 100%;
     overflow-x: hidden;
     background: #17191C;
+    /* background: url(pictures/bg_main1.png) center top no-repeat,
+                url(pictures/bg_main2.png) center bottom no-repeat;
+    background-size: 100%;
+    back */
+    
+    
 }
 
 ul , li {
@@ -61,25 +67,25 @@ h3{
     font-weight: 700;
     font-size: 24px;
 }
-
-.background{
-    margin: 0;
-}
 .container{
     width: 1140px;
-    margin: 0 auto;
+    margin: 21px auto;
 }
 
 
 .header{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 125px;
-
+    margin-bottom: 130px;
+}
+.header__logo,
+.header__menu,
+.header__contacts{
+    display: inline-block;
+    vertical-align: middle;
 }
 .header__logo{
+    margin-right: 258px;
+}
+.logo{
     font-weight: 700;
     font-size: 36px;
     background: linear-gradient(87.62deg, #8F00FF -2.44%, #00A3FF 100%);
@@ -88,15 +94,16 @@ h3{
     background-clip: text;
 }
 .header__menu{
-    width: 391px;
+    margin-right: 224px;
 }
-.header__list{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+.menu__item{
+    display: inline-block;
+    margin-right: 63px;
 }
-.header__title{
+.menu__item:last-child{
+    margin-right: 0;
+}
+.menu__title{
     color: #fff;
     font-style: normal;
     font-weight: 400;
@@ -104,58 +111,49 @@ h3{
     line-height: 1.42;
 }
 .header__contacts{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-
     color: #fff;
 }
-.header__phone{
+.phone{
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-size: 26px;
     color: #fff;
-
 }
 .header__workhours{
+    margin-left: 92px;
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
 }
 
 .intro{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    width: 637px;
-    height: 373px;
-    margin: 0px;
-    margin-bottom: 193px;
+    margin-right: 503px;
+    margin-bottom: 190px;
 }
 .intro__header{
     font-weight: 700;
     font-size: 60px;
     line-height: 1.1;
+    margin-bottom: 21px;
 }
 .intro__desc{
     font-weight: 400;
     font-size: 21px;
-}
-.intro__more{
-    display: flex;
-    min-width: 168px;
-    min-height: 55px;
+    margin-bottom: 76px;
 }
 .intro__button{
+    min-width: 168px;
+    min-height: 55px;
+    color: #fff;
+    background: #8F00FF;
+    padding: 18px 40px 18px 40px;
+}
+.button{
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
-    color: #fff;
     font-weight: 700;
     font-size: 14px;
     text-transform: uppercase;
-    background: #8F00FF;
-    padding: 18px 40px 18px 40px;
     border-radius: 5px;
 }
 .intro__button:hover{
@@ -165,35 +163,19 @@ h3{
 }
 
 .news{
-    position: relative;
-    margin: 0;
-    width: 1140px;
-    height: 549px;
+    margin-bottom: 127px;
 }
 
-.news__header,
-.news__games{
-    position: absolute;
-}
 .news__header{
-    display: flex;
-    align-items: center;
+    margin-bottom: 51px;
 }
-.news__header::after{
-    content: "";
-    display: block;
-    background: url("pictures/news.png") no-repeat;
-    width: 42px;
-    height: 42px;
-    float: right;
-    margin-left: 9px;
+.news__title ,
+.news__icon{
+    display: inline-block;
+    vertical-align: middle;
 }
-.news__name{
-color:black
-}
-
-.news__games{
-    bottom: 0;
+.news__title{
+    margin-right: 9px;
 }
 
 .news__list{
@@ -213,86 +195,208 @@ color:black
     height: 449px;
     margin-right: 27px;
 }
+.news__card:last-child{
+    margin-right: 0;
+}
 
 .news__bg{
     max-height: 144px;
 }
+.news__name{
+    color:black;
+    margin-bottom: 21px;
+    }    
 .news__content{
-    height: 305px;
-    position: relative;
-    margin: 22px;
+
+    padding: 33px 16px 26px 22px;
 }
 
 .news__features{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    margin-bottom: 23.5px;
+}
+.feature{
+    display: inline-block;
+    margin-right: 50px
+}
+.feature:last-child{
+    margin-right: 0;
 }
 
-.news__text::before{
-    content: "";
-    display: block;
-    width: 26px;
-    height: 26px;
-    float: left;
-    margin: 10;
+.feature__icon{
+    margin: 0 5px 0 3px;
+    vertical-align: middle;
 }
-
-#time::before{
-    background: url("pictures/clock.png") no-repeat;
+.feature__text{
+    vertical-align: middle;
+    color: #666666;
 }
-
-#questions::before{
-    background: url("pictures/qa.png") no-repeat;
-}
-
-.news__text , 
 .news__desc{
-    color: #303030;
-}
-
-.news__text{
     font-weight: 400;
-    font-size: 16px;
-}
-
-.news__more{
-    position: absolute;
-    bottom: 0 ;
-    min-width: 135px;
-    min-height: 55px;
+    font-size: 14px;
+    color: #303030;
+    margin-bottom: 24.5px;
 }
 .news__button{
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
+    min-width: 135px;
+    min-height: 55px;
     color: #8F00FF;
-    font-weight: 700;
-    font-size: 14px;
-    text-transform: uppercase;;
     background: white;
+    border-color: #8F00FF;
     padding: 18px 30px 18px 30px;
-    border:1px solid #8F00FF;
-    border-radius: 5px;
 }
 .news__button:hover{
     background: #8F00FF;
     color: #fff;
 }
-
 .news__list:last-child{
     margin-right: 0px;
 }
+
 .done{
-    position: relative;
-    top: 1451px;
+    margin-bottom: 120px;
+}
+
+.done__header{
+    margin-bottom: 46px;
+}
+.done__body{
+    margin-bottom: 53px;
+}
+.done__list{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.done__card{
+    margin-right: 13px;
+}
+.done__card:last-child{
+    margin-right: 0;
+}
+
+.done__bg{
+    background: linear-gradient(0deg, rgba(90, 90, 90, 0.3), rgba(90, 90, 90, 0.3));
+    z-index: -1;
+    border-radius: 3px;
+}
+
+.done__content{
+    margin-top: -141px;;
+    padding: 0 51px 27px 30px;
+}
+.done__date{
+    margin-bottom: 15px;
+}
+.done__paginator{
+    display:flex;
+    justify-content: center;
+}
+.pages{
+    display: inline-block;
+}
+.current__page{
+    font-weight: 400;
+    font-size: 16px;
+    margin-right: 25px;
+}
+.page__item{
+    display: inline-block;
+    
+}
+.page__link{
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: transparent;
+    font-weight: 700;
+    font-size: 16px;
+    color:white;
+    text-align: center;
+    line-height: 32px;
+    transition: .3s;
+}
+.page__link:hover{
+    background: #8F00FF;
 }
 
 .about{
-    position: relative;
-    top: 2154px;
+    margin-bottom: 53px;
+}
+.about__pic{
+    display: inline-block;
+}
+.about__box{
+    display: inline-block;
+    vertical-align: top;
+    width: 785px;
+    height: 455px;
+    background: linear-gradient(71.43deg, #8F00FF 0%, #148CFF 100%), #212121;
+    border-radius: 5px;
+    padding: 70px 202px 66px 81px;
+    margin-left: -139px;
+    margin-top: 118px;
 }
 
-footer{
-    position: relative;
-    top: 2780px;
+.about__header{
+    margin-bottom: 37px;
+}
+
+.about__text{
+    margin-bottom: 43px;
+}
+.about__button{
+    min-height: 55px;
+    min-width: 168px;
+    padding: 18px 40px 18px 40px; 
+    color:#fff;
+    border-color: white;
+}
+.about__button:hover{
+    color:#8F00FF;
+    background-color: white;
+}
+
+.line{
+    height: 1px;
+    background: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.1;
+    margin-bottom: 45px;
+}
+
+.footer__logo,
+.footer__menu,
+.footer__socials,
+.footer__contacts{
+    display:inline-block;
+    vertical-align: middle;
+}
+
+.footer__logo{
+    margin-right: 125px;
+}
+
+.footer__menu{
+    margin-right: 110px;
+}
+
+.footer__socials{
+    margin-right: 55px;
+}
+
+.socials__item{
+    display: inline-block;
+    margin-right: 10px;
+}
+.socials__item:last-child{
+    margin-right: 0;
+}
+.footer__comment{
+    margin-left: 28px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    color: #9A9A9A;
 }
