--- a/main.css
+++ b/main.css
@@ -21,12 +21,12 @@ body{
     width: 100%;
     overflow-x: hidden;
     background: #17191C;
-    /* background: url(pictures/bg_main1.png) center top no-repeat,
-                url(pictures/bg_main2.png) center bottom no-repeat;
+    background-image: url(pictures/bg_main1.png), url(pictures/bg_main2.png);
+    background-attachment: local, local;
+    background-position: top, bottom;
+    background-repeat: no-repeat, no-repeat;
+    background-blend-mode: luminosity, luminosity ;
     background-size: 100%;
-    back */
-    
-    
 }
 
 ul , li {
@@ -74,17 +74,12 @@ h3{
 
 
 .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 130px;
 }
-.header__logo,
-.header__menu,
-.header__contacts{
-    display: inline-block;
-    vertical-align: middle;
-}
-.header__logo{
-    margin-right: 258px;
-}
+
 .logo{
     font-weight: 700;
     font-size: 36px;
@@ -93,15 +88,11 @@ h3{
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
-.header__menu{
-    margin-right: 224px;
-}
-.menu__item{
-    display: inline-block;
-    margin-right: 63px;
-}
-.menu__item:last-child{
-    margin-right: 0;
+
+.menu{
+    width: 391px;
+    display: flex;
+    justify-content: space-around;
 }
 .menu__title{
     color: #fff;
@@ -111,6 +102,9 @@ h3{
     line-height: 1.42;
 }
 .header__contacts{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
     color: #fff;
 }
 .phone{
@@ -120,7 +114,6 @@ h3{
     color: #fff;
 }
 .header__workhours{
-    margin-left: 92px;
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
@@ -186,40 +179,28 @@ h3{
 .news__card{
     display: flex;
     flex-direction: column;
-    
     bottom: 0;
     border: 1px solid transparent;
     border-radius: 5px;
     background-color: #fff;
-    width: 362px;
-    height: 449px;
-    margin-right: 27px;
+    max-width: 362px;
 }
-.news__card:last-child{
-    margin-right: 0;
-}
-
 .news__bg{
     max-height: 144px;
 }
 .news__name{
     color:black;
     margin-bottom: 21px;
-    }    
-.news__content{
+    }
 
-    padding: 33px 16px 26px 22px;
+.news__content{
+    padding: 33px 34px 26px 22px;
 }
 
 .news__features{
+    display: flex; 
+    justify-content: space-between;
     margin-bottom: 23.5px;
-}
-.feature{
-    display: inline-block;
-    margin-right: 50px
-}
-.feature:last-child{
-    margin-right: 0;
 }
 
 .feature__icon{
@@ -237,8 +218,8 @@ h3{
     margin-bottom: 24.5px;
 }
 .news__button{
-    min-width: 135px;
-    min-height: 55px;
+    /* min-width: 135px;
+    min-height: 55px; */
     color: #8F00FF;
     background: white;
     border-color: #8F00FF;
@@ -288,8 +269,7 @@ h3{
     margin-bottom: 15px;
 }
 .done__paginator{
-    display:flex;
-    justify-content: center;
+    text-align: center;
 }
 .pages{
     display: inline-block;
@@ -365,35 +345,24 @@ h3{
     margin-bottom: 45px;
 }
 
-.footer__logo,
-.footer__menu,
-.footer__socials,
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.socials{
+    display: flex;
+    flex-direction: row;
+    width: 174px;
+    justify-content: space-between;
+}
 .footer__contacts{
-    display:inline-block;
-    vertical-align: middle;
-}
-
-.footer__logo{
-    margin-right: 125px;
-}
-
-.footer__menu{
-    margin-right: 110px;
-}
-
-.footer__socials{
-    margin-right: 55px;
-}
-
-.socials__item{
-    display: inline-block;
-    margin-right: 10px;
-}
-.socials__item:last-child{
-    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 .footer__comment{
-    margin-left: 28px;
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
