--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ ul , li {
 
 a{
     text-decoration: none;
+    color: inherit;
 }
 
 button{
@@ -68,8 +69,8 @@ h3{
     font-size: 24px;
 }
 .container{
-    width: 1140px;
-    margin: 21px auto;
+    width: 1168px;
+    margin: 21px auto 
 }
 
 
