--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ h3{
 }
 .container{
     width: 1168px;
-    margin: 21px auto 
+    margin: 34px auto 
 }
 
 
@@ -119,7 +119,53 @@ h3{
     font-weight: 400;
     font-size: 13px;
 }
-
+.dropdown{
+    position:relative
+}
+.dropdown:hover .dropdown__content{
+    left: 0;
+    opacity: 100%;
+    transition: opacity 0.4s;
+}
+.dropdown__content{
+    position:absolute;
+    background: #EDEDED;
+    color: #1E1F20;
+    width: 160px;
+    margin-left: -62px;
+    margin-top: 8px;
+    border-radius: 9px;
+    padding: 15px 19px;
+    left: -9999px;
+    opacity: 0;
+}
+.dropdown__content:before{
+    content: "";
+    display: block;
+    position: absolute;
+    border:10px solid transparent;
+    margin-top: -10px;
+    margin-left: 95px;
+    width: 0;
+    height: 0;
+    border-bottom-color: #EDEDED;
+    border-top-width: 0;
+}
+.dropdown__content:before{
+    content: "";
+    display: block;
+    height: 30px;
+    left: 0;
+    right: 0;
+    top: -29px;
+    position: absolute;
+}
+.dropdown__days{
+    font-weight: 700;
+}
+.dropdown__lunch{
+    font-weight: 600;
+}
 .intro{
     margin-right: 503px;
     margin-bottom: 190px;
@@ -154,6 +200,7 @@ h3{
     background: white;
     border:1px solid #8F00FF;
     color: #8F00FF;
+    transition: 0.4s;
 }
 
 .news{
@@ -229,6 +276,7 @@ h3{
 .news__button:hover{
     background: #8F00FF;
     color: #fff;
+    transition: 0.4s;
 }
 .news__list:last-child{
     margin-right: 0px;
@@ -336,6 +384,7 @@ h3{
 .about__button:hover{
     color:#8F00FF;
     background-color: white;
+    transition: 0.4s;
 }
 
 .line{
@@ -357,6 +406,29 @@ h3{
     flex-direction: row;
     width: 174px;
     justify-content: space-between;
+}
+.socials__icon{
+    display:block;
+}
+.fb-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -10px -10px;
+}
+.vk-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -66px -10px;
+}
+.tg-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -10px -66px;
+}
+.in-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -66px -66px;
 }
 .footer__contacts{
     display: flex;
