--- a/reviews.css
+++ b/reviews.css
@@ -13,67 +13,52 @@ body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
-    color:#fff
 }
 .wrapper{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
 }
+
 ul , li {
     padding: 0;
     margin: 0;
     list-style-type: none;
 }
 
-a, a:hover, a:visited, a:active {
+a,
+a:hover,
+a:visited,
+a:active{
     color: inherit;
     text-decoration: none;
-   }
-
-button{
-    background: transparent;
-    padding: 0;
-    outline: none;
-    border: 1px solid #8F00FF;
-    color:#8F00FF;
-    padding: 18px 40px 18px 40px;
 }
 
-button:hover{
-    background: #8F00FF;
-    color:white;
-}
-
-p{
-    margin: 0;
-    color: white;
-}
-
-h1,
-h2,
-h3 {
-    margin:0;
-    color: white;
-}
-
-h2{
-    font-weight: 700;
-    font-size: 36px;
-}
-
-h3{
-    font-weight: 700;
-    font-size: 24px;
-}
 .button{
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
+    background: transparent;
+    outline: none;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    padding: 18px 45px;
+    color: #fff;
     font-weight: 700;
     font-size: 14px;
     text-transform: uppercase;
-    border-radius: 5px;
+    cursor: pointer;
 }
+
+.btn--color--black{
+    background:#000000;
+}
+.btn--color--purple{
+    background:#8F00FF;
+}
+
+.button:hover{
+    background:#B9EAE4;
+    transition: 0.4s;
+}
+
 
 .container{
     width: 1168px;
@@ -114,7 +99,7 @@ h3{
     display: flex;
     justify-content: space-around;
 }
-.menu__title{
+.menu__item{
     color: #fff;
     font-style: normal;
     font-weight: 400;
@@ -138,10 +123,61 @@ h3{
     font-weight: 400;
     font-size: 13px;
 }
+
+.dropdown{
+    position:relative
+}
+.dropdown:hover .dropdown__content{
+    left: 0;
+    opacity: 100%;
+    transition: opacity 0.4s;
+}
+.dropdown__content{
+    position:absolute;
+    background: #EDEDED;
+    color: #1E1F20;
+    width: 160px;
+    margin-left: -62px;
+    margin-top: 8px;
+    border-radius: 9px;
+    padding: 15px 19px;
+    left: -9999px;
+    opacity: 0;
+}
+.dropdown__content:before{
+    content: "";
+    display: block;
+    position: absolute;
+    border:10px solid transparent;
+    margin-top: -10px;
+    margin-left: 95px;
+    width: 0;
+    height: 0;
+    border-bottom-color: #EDEDED;
+    border-top-width: 0;
+}
+.dropdown__content:before{
+    content: "";
+    display: block;
+    height: 30px;
+    left: 0;
+    right: 0;
+    top: -29px;
+    position: absolute;
+}
+.dropdown__days{
+    font-weight: 700;
+}
+.dropdown__lunch{
+    font-weight: 600;
+}
+
+
 .hero__title{
     margin-bottom: 104px;
     font-weight: 700;
     font-size: 72px;
+    color:#fff;
 }
 
 .breadcrumbs{
@@ -159,53 +195,101 @@ h3{
 .breadcrumb__item:last-child::after{
     content: none;
 }
-.main{
-    background: #fff;
+.reviews{
+    column-count: 2;
+    column-gap: 30px;
+    margin: 100px 0 70px;
 }
-.main__container{
-    padding: 100px 0 49px 0;
+.reviews__item{
+    margin-bottom: 20px;
 }
-.main__list{
-    display: flex;
+.review{
+    display: inline-flex;
     flex-direction: column;
-    margin-bottom: 70px;
+    padding: 50px 30px 40px 30px;
+    background: #F4F5F5;
+    color: #1A1B1E;
+    border-radius: 5px;
 }
-.main__game{
+.review__header{
     display: flex;
+    align-items: center;
+    margin-bottom: 30px;
 }
-.main__game:nth-child(1){
+.review__photo{
+    margin-right: 22px;
+}
+.review__user{
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.review__user:hover{
+    color:#2E77A4;
+    text-decoration: underline;
+}
+.review__user::after{
+    content: url("pictures/vk-blue 1.png");
+    margin-left: 7px;
+    height: 30px;
+}
+.avatar{
+    height:140px;
+    width: 140px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.review__tags{
+    display: flex;
+    align-items: flex-start;
+}
+
+.tag{
+    font-size: 13px;
+    color:#303030;
+    padding: 15px 20px 15px 20px;
+    border-radius: 50px;
+    background: #E7E7E7;
+}
+.tag--bg--green{
+    background: #B9EAE4;
+}
+
+.review__title{
+    font-weight: 700;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.review__content-text{
+    font-weight: 400;
+    font-size: 16px;
+    color: #818181;
     margin-bottom: 50px;
 }
 
-.game__pic{
-    width: 460px;
-    height: 333px;
-    margin: 0 56px 0 0;
-    background-color: black;
-    object-fit: contain;
-    border-radius: 5px;
+.review__date{
+    font-weight: 600;
+    font-size: 14px;
 }
-.game__text{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 12px 0 18px 0;
-}
-.game__name{
-    font-weight: 700;
-    font-size: 36px;
-    color: #000000;
-}
-.game__desc{
-    font-weight: 400;
-    font-size: 16px;
-    color: #303030;
-}
+
+
+
+
+
+
+
+
+
 
 .main__paginator{
     color: #000000;
     text-align: center;
+    margin-bottom: 85px;
 }
 .pages{
     display: inline-block;
@@ -236,29 +320,100 @@ h3{
     color:#fff;
 }
 
-.partners{
-    background: #F4F5F5;
-}
-.partners__container{
-    padding: 88px 0 115px 0;
-}
-.partners__title{
-    color: #000000;
-    margin-bottom: 75px;
-}
-.partners__list{
+
+
+.separator{
     display: flex;
-    flex-direction: row;
-    flex-flow: wrap;
-    justify-content: space-around;
-    min-height: 193px;
+    justify-content: center;
+    flex-direction: column;
+    background: #17191C url("pictures/19629 1.png") right 10% bottom no-repeat;
+    min-height: 360px;
 }
 
-.partner{
-    flex: 1 0 21%;
-    align-self: center;
+.separator__title{
+    font-weight: 700;
+    font-size: 48px;
+    color: #FFFFFF;
+    max-width: 40%;
+}
+.inner-section--bg--grey{
+    background: #F4F5F5;
+    padding: 60px 0 100px;
+}
+.form__row{
+    display: flex;
+    margin-bottom: 30px;
 }
 
+.form__input-textarea{
+    height: 235px;
+}
+.form__input{
+    flex:1;
+    margin-right: 30px;
+    border-radius: 4px;
+    border:none;
+    background: #FFFFFF;
+    padding: 30px 20px;
+    font-weight: 400;
+    font-size: 18px;
+    color:#1A1B1E;
+}
+
+.form__input::placeholder{
+    color: #666666;
+
+}
+.form__input:last-child{
+    margin-right:0;
+}
+
+.form__input:focus{
+    border: #8F00FF;
+}
+
+.form__controls{
+    display: flex;
+    align-items: baseline;
+
+}
+.form__controls-title{
+    width:40%;
+    font-weight: 400;
+    font-size: 18px;
+    color:#1A1B1E
+}
+
+.controls{
+    flex:1;
+    display: flex;
+    flex-wrap: wrap;
+}
+.controls__item{
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+.controls__elem{
+    cursor: pointer;
+}
+.controls__checkbox:checked ~ .controls__tag{
+    background:#B9EAE4;
+    transition: 0.2s;
+}
+.controls__checkbox{
+    display: none;
+}
+
+.form__btns{
+    display: flex;
+    justify-content: flex-end;
+}
+.form__btn{
+    margin-right: 17px;
+}
+.form__btn:last-child{
+    margin-right: 0;
+}
 .footer{
     padding: 62px 0 43px 0;
     background: #17191C;
@@ -274,6 +429,31 @@ h3{
     width: 174px;
     justify-content: space-between;
 }
+.socials__icon{
+    display:block;
+}
+.fb-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -10px -10px;
+}
+.vk-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -66px -10px;
+}
+.tg-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -10px -66px;
+}
+.in-icon{
+    width: 36px; 
+    height: 36px;
+    background: url('pictures/css_sprites.png') -66px -66px;
+}
+
+
 .footer__contacts{
     display: flex;
     flex-direction: column;
